--- a/README.rdoc
+++ b/README.rdoc
@@ -4,29 +4,6 @@ pg_ctl -D /usr/local/var/postgres -l /usr/local/var/postgres/server.log start
 then start server again :^)
 
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+This is a prototype social network built with Rails and hosted on Heroku. 
 
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+Go to alpha.extrara.com to see it in action!
